initial GcParser support for Java 8 logs