@@ -6,3 +6,4 @@ version := "1.0-SNAPSHOT"
 
 scalaVersion := "2.10.4"
 
+//javaOptions := Seq("-XX:+UseConcMarkSweepGC")
